# p0443

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
docs/: a_laymans_understanding.md
include/p0443/: asio_executor.hpp  immediate_executor.hpp  task.hpp  transform.hpp
include/p0443/execution/: execution.hpp  executor_traits.hpp  receiver_traits.hpp  sender_traits.hpp
include/p0443/execution/detail/: execute_impl.hpp  execute_impl.ipp  execution.hpp  schedule_impl.hpp  set_done_impl.hpp  set_error_impl.hpp  set_value_impl.hpp  submit_impl.hpp  submit_impl.ipp  tag.hpp
include/p0443/util/: detect.hpp  type_traits.hpp  utility.hpp
include/p0443_v2/: await_sender.hpp  connect.hpp  execute.hpp  handle_done.hpp  handle_error.hpp  identity_sender.hpp  ignore_values.hpp  immediate_task.hpp  just.hpp  lazy.hpp  let.hpp  make_receiver.hpp  make_sender.hpp  schedule.hpp  sender_traits.hpp  sender_value_type.hpp  sequence.hpp  set_done.hpp  set_error.hpp  set_value.hpp  shared_state.hpp  sink_receiver.hpp  start.hpp  submit.hpp  submit_while.hpp  sync_wait.hpp  tag.hpp  tag_invoke.hpp  then.hpp  transform.hpp  type_traits.hpp  via.hpp  when_all.hpp  when_any.hpp  with.hpp
include/p0443_v2/asio/: accept.hpp  connect.hpp  deadline_timer.hpp  executor.hpp  handshake.hpp  read_all.hpp  read_some.hpp  resolve.hpp  timer.hpp  write_all.hpp
samples/asio/: CMakeLists.txt
samples/asio/chat/: CMakeLists.txt  chat-client.cpp  chat-server.cpp  chat_message.hpp  coro-chat-client.cpp  coro-chat-server.cpp
samples/asio/tcp_echo/: CMakeLists.txt  tcp_coro_echo_client.cpp  tcp_coro_echo_server.cpp  tcp_echo.cpp  tcp_echo_client.cpp  tcp_echo_server.cpp  tcp_echo_server_stack_only.cpp
tests/: CMakeLists.txt  execution.cpp  task.cpp
tests/v2/: asio_connect.cpp  asio_coro_connect.cpp  asio_executor.cpp  asio_timer.cpp  await_sender.cpp  beast_ws.cpp  handle_error.cpp  immediate_task.hpp  just.cpp  let.cpp  sender_traits.cpp  sequence.cpp  submit.cpp  sync_wait.cpp  tag_invoke.cpp  test_receiver.hpp  transform.cpp
